fix: update z-index value for sticky

--- a/src/scss/custom/_sticky.scss
+++ b/src/scss/custom/_sticky.scss
@@ -1,6 +1,6 @@
 .bs-is-sticky {
   position: sticky !important;
-  z-index: 99999 !important;
+  z-index: 9999 !important;
 }
 
 .bs-is-fixed {
